manifests/ebpfCachestatExporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: ebpf-exporter
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 1.3.1
  name: ebpf-exporter
  namespace: monitoring
spec:
  clusterIP: None
  ports:
  - name: https
    port: 9435
    targetPort: https
  selector:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: ebpf-exporter
    app.kubernetes.io/part-of: kube-prometheus
